<resources>
    <string name="app_name">H-Fit</string>

    <string name="action_settings">설정</string>
    <string name="nav_item_home">홈</string>
    <string name="nav_item_private">개인정보 설정</string>
    <string name="nav_item_deviceSetting">기기설정</string>
    <string name="nav_item_setting">설정</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="main_text_heart">심박수</string>
    <string name="main_test_kcal">칼로리</string>
    <string name="main_text_bpm">bpm</string>
    <string name="main_text_kcal">kcal</string>
    <string name="main_text_step">걸음수</string>
    <string name="main_text_battery">배터리</string>
    <string name="main_text_steps">걸음</string>
    <string name="main_text_level">레벨</string>

    <!-- activity step -->
    <string name="step_text_today">일일</string>
    <string name="step_text_week">주간</string>
    <string name="step_text_month">월간</string>
    <string name="step_text_data">걸음수 데이터</string>
    <string name="step_todaysteps">todays steps</string>

    <!-- activity heart -->
    <string name="heart_text_today">일일</string>
    <string name="heart_text_week">주간</string>
    <string name="heart_text_month">월간</string>
    <string name="heart_text_data">심박 데이터</string>
    <string name="heart_todayssteps">todays heart</string>

    <!-- activity kcal -->
    <string name="kcal_text_today">일일</string>
    <string name="kcal_text_week">주간</string>
    <string name="kcal_text_month">월간</string>
    <string name="kcal_text_data">칼로리 데이터</string>
    <string name="kcal_todayssteps">todays kcal</string>

    <!-- activity setting -->
    <string name="setting_text_message">메시지 설정</string>
    <string name="setting_text_alarm">알람</string>
    <string name="setting_text_call">전화</string>
    <string name="setting_text_messages">문자</string>
    <string name="setting_text_kakao">카카오톡</string>
    <string name="setting_text_firmware">펌웨어 다운로드</string>


    <!-- activity private -->
    <string name="private_text_name">이름</string>
    <string name="private_text_hint_name">이름을 입력해 주세요</string>
    <string name="private_text_sex">성별 선택</string>
    <string name="private_text_height">신장</string>
    <string name="private_text_hint_height">신장을 입력해 주세요</string>
    <string name="private_text_weight">체중</string>
    <string name="private_text_hint_weight">체중을 입력해 주세요</string>


    <!-- Back FInish -->
    <string name="popup_title">H-Fit 종료</string>
    <string name="popup_message">정말 앱을 종료 하시겠습니까?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>

    <!-- activity device -->
    <string name="text_device">기기 발견 안됨</string>
    <string name="text_device_scan">기기 다시 찾기</string>

    <!-- dialog device -->
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="paired">paired</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>


    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>

    <string name="permission_log_label">read and write log</string>
    <string name="permission_log_description">Allows the app to write and read from Nordic Semiconductor Event log</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="action_about">About</string>
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_disconnect">DISCONNECT</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_mcp">nRF Master Control Panel</string>

    <string name="battery">%d%%</string>
    <string name="progress">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle__not_bonded">AVAILABLE DEVICES:</string>

    <string name="bonding">Bonding with the device&#8230;</string>
    <string name="bonded">The device is now bonded.</string>

    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>

    <string name="permission_title">Permission required</string>
    <string name="permission_sd_text">nRF Toolbox would like to copy some sample applications, that may be uploaded onto your nRF51 device using the DFU (Device Firmware Update), to the memory of this device. If you agree, you will be asked to give the application permission to access files on your device.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>


</resources>
